...
                        android:layout_marginEnd="16dp"
                        android:text="@string/text_room_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/edittext_room_name_create_room"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/box_room_name_online"
...
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/button_cancel_create_room"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
...
                android:background="@drawable/box_button_leave_game_bottom_dialog"
                android:elevation="8dp"
                android:text="@string/text_button_cancel_create_room"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/button_next_create_room"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
...
