...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_room_waiting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </ScrollView>

...
